--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cypress": "cypress open"
+    "cypress": "./node_modules/.bin/cypress open"
 
   },
   "eslintConfig": {
